Whitespace fixes

--- a/sass/components/_desktop-menu.scss
+++ b/sass/components/_desktop-menu.scss
@@ -29,38 +29,36 @@
       padding-top: 12px;
       padding-right: 12px;
     }
-
-    #search-bar {
   
-      form {
+    form {
+      padding: 0px;
+    
+      button {
+        width: fit-content;
         padding: 0px;
+      }
   
-        button {
-          width: fit-content;
-          padding: 0px;
+      input[type=search] {
+        width: 120px;
+        transition: all 0.3s;
+        border-radius: 20px;
+        margin-top: 3px;
+        padding-left: 35px;
+        padding-right: 7px;
+        background: white url("/images/search-solid.svg") no-repeat 10px center;
+        background-size: 18px;
+        border: none;
+  
+        &:focus {
+          width: 240px;
+          outline: none;
         }
   
-        input[type=search] {
-          width: 120px;
-          transition: all 0.3s;
-          border-radius: 20px;
-          margin-top: 3px;
-          padding-left: 35px;
-          padding-right: 7px;
-          background: white url("/images/search-solid.svg") no-repeat 10px center;
-          background-size: 18px;
-          border: none;
-  
-          &:focus {
-            width: 240px;
-            outline: none;
-          }
-  
-          &::placeholder {
-            color: $secondary;
-          }
+        &::placeholder {
+          color: $secondary;
         }
       }
+  
     }
   
   }
